# medic

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  Makefile  README.md  benchmark_report.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts
agents/: __init__.py  citations.py  contracts.py  graph.py  model_gateway.py  model_router.py  models.py  observability.py  ports.py  professor.py  profiles.json  profiles.py  specialists.py  structured_output.py  trace.py
backend/: __init__.py  chat_models.py  chat_run_models.py  chat_run_use_cases.py  chat_use_cases.py  dependencies.py  execution.py  factory.py  full_document_reader.py  llm_provider_stats.py  pipeline_models.py  pipeline_use_cases.py  routes.py  use_cases.py
clients/: openrouter.py  openrouter_provider_stats.py
dashboard/: __init__.py  admin.py  api_models.py  app.py  assets.py  auth.py  dependencies.py  documents.py  http.py  job_models.py  job_runner.py  jobs.py  schemas.py  selection.py
docs/: agent-prompt-authoring-brief.md  deployment.md  development.md  evaluation.md  oci-public-https.md  oci-public-port-8000.md  ui-ux-implementation-plan.md
evaluation/: config.py  factory.py
frontend/: main.tsx
migrations/: env.py
observability/: __init__.py  config.py  langfuse.py  logging_config.py
rag/: config.py  demo_seed.py  document_paths.py  document_preparation.py  embedder.py  full_process.py  indexer.py  markdown_indexing.py  openrouter_client.py  progress.py  qdrant.py  retrieval.py  searcher.py  settings.json  setup_project.py
scripts/: backfill_owner_payload.py  export_openapi.py  open-app-port-8000-firewalld.sh  open-caddy-ports-firewalld.sh  setup.sh  smoke_runtime_image.sh
tests/: test_agents.py  test_answer_question_use_case.py  test_ask_endpoint.py  test_backend_architecture.py  test_chat_conversations.py  test_chat_model_settings.py  test_chat_models.py  test_chat_ui.py  test_citations.py  test_dashboard.py  test_dashboard_services.py  test_database.py  test_demo_seed.py  test_deploy_config.py  test_docker_compose.py  test_document_preparation.py  test_embedder.py  test_evaluation_application.py  test_evaluation_architecture.py  test_evaluation_cli.py  test_evaluation_config.py  test_evaluation_domain.py  test_evaluation_infrastructure.py  test_full_process.py  test_gitignore.py  test_indexer.py  test_langfuse_observability.py  test_logging_config.py  (+14 more)
(+148 files in other folders)
