[project]
name = "medic"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.0",
    "langchain-openrouter>=0.2.3",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.9,<5",
    "langgraph>=1.2.0",
    "openai>=2.34.0",
    "psycopg[binary]>=3.3.4",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.17.1",
    "rapidocr-onnxruntime>=1.4.4",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
evaluation = [
    "langchain-community==0.3.31",
    "ragas==0.4.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = [
    "main.py",
    "agents",
    "backend",
    "clients",
    "dashboard",
    "evaluation",
    "migrations",
    "observability",
    "rag",
    "tools",
]

[[tool.mypy.overrides]]
module = ["pymupdf4llm", "rapidocr_onnxruntime"]
ignore_missing_imports = true
